# trussed-auth

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: cd-test.yml  cd.yml
.reuse/: dep5
backend/: CHANGELOG.md  Cargo.toml
backend/src/: data.rs  lib.rs  migrate.rs
backend/tests/: backend.rs
extension/: CHANGELOG.md  Cargo.toml
extension/src/: lib.rs  reply.rs
src/: backend.rs  extension.rs  lib.rs  migrate.rs
src/backend/: data.rs
src/extension/: reply.rs  request.rs
test_fs/: fido-trussed-auth.lfs  fido-trussed.lfs
tests/: backend.rs
