# Copyright (C) Nitrokey GmbH
# SPDX-License-Identifier: CC0-1.0

[workspace]
members = ["backend", "extension"]
resolver = "2"

[workspace.package]
authors = ["Nitrokey GmbH <info@nitrokey.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/trussed-dev/trussed-auth"

[workspace.dependencies]
serde = { version = "1", default-features = false }
trussed-core = { version = "0.2", features = ["serde-extensions"] }

[patch.crates-io]
trussed-auth = { path = "extension" }

trussed = { git = "https://github.com/trussed-dev/trussed.git", rev = "0b65280d69be541b8771f7756139826332c7d674" }
admin-app = { git = "https://github.com/Nitrokey/admin-app.git", rev = "46f0c4fd9110b7ab68468c8070a5aa290e9654c7" }
apdu-app = { git = "https://github.com/trussed-dev/apdu-dispatch.git", branch = "release" }
